...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top"
                android:layout_marginTop="@dimen/space_l">

                <CheckBox
                    android:id="@+id/cbAgreeTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:buttonTint="@color/color_login_headline" />

...
                    android:layout_weight="1"
                    android:background="@color/color_login_divider_line" />
            </LinearLayout>

            <!-- Guest button (outlined pill) -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGuest"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:text="@string/login_guest_btn_text"
                android:textSize="@dimen/text_guest_button"
                android:textColor="@color/color_login_headline"
                android:fontFamily="sans-serif-medium"
...
